# Linked lists lab.
cmake_minimum_required(VERSION 2.6)
project(MAP)

#if(CMAKE_COMPILER_IS_GNUCXX)
	set(CMAKE_C_FLAGS "-Wextra -Wall -std=c89 -pedantic -Wstrict-prototypes -Wmissing-prototypes -Wdeclaration-after-statement -pipe -g")
#elseif(MSVC)
#	set(CMAKE_CXX_FLAGS "/EHa /W4 /WX /Za")
#elseif(BORLAND)
#	set(CMAKE_CXX_FLAGS "-w")
#endif(CMAKE_COMPILER_IS_GNUCXX)

add_executable(map driver.c map.c)

enable_testing()
add_test(TEST0 ${PROJECT_SOURCE_DIR}/difftest.sh ./map 0 ./myoutput0.txt ${PROJECT_SOURCE_DIR}/out0)
add_test(TEST1 ${PROJECT_SOURCE_DIR}/difftest.sh ./map 1 ./myoutput1.txt ${PROJECT_SOURCE_DIR}/out1)
add_test(TEST2 ${PROJECT_SOURCE_DIR}/difftest.sh ./map 2 ./myoutput2.txt ${PROJECT_SOURCE_DIR}/out2)
add_test(TEST3 ${PROJECT_SOURCE_DIR}/difftest.sh ./map 3 ./myoutput3.txt ${PROJECT_SOURCE_DIR}/out3)
add_test(TEST4 ${PROJECT_SOURCE_DIR}/difftest.sh ./map 4 ./myoutput4.txt ${PROJECT_SOURCE_DIR}/out4)
add_test(TEST5 ${PROJECT_SOURCE_DIR}/difftest.sh ./map 5 ./myoutput5.txt ${PROJECT_SOURCE_DIR}/out5)
add_test(TEST6 ${PROJECT_SOURCE_DIR}/difftest.sh ./map 6 ./myoutput6.txt ${PROJECT_SOURCE_DIR}/out6)
add_test(TEST7 ${PROJECT_SOURCE_DIR}/difftest.sh ./map 7 ./myoutput7.txt ${PROJECT_SOURCE_DIR}/out7)
add_test(TEST8 ${PROJECT_SOURCE_DIR}/difftest.sh ./map 8 ./myoutput8.txt ${PROJECT_SOURCE_DIR}/out8)
add_test(TEST9 ${PROJECT_SOURCE_DIR}/difftest.sh ./map 9 ./myoutput9.txt ${PROJECT_SOURCE_DIR}/out9)
add_test(TEST10 ${PROJECT_SOURCE_DIR}/difftest.sh ./map 10 ./myoutput10.txt ${PROJECT_SOURCE_DIR}/out10)
add_test(TEST11 ${PROJECT_SOURCE_DIR}/difftest.sh ./map 11 ./myoutput11.txt ${PROJECT_SOURCE_DIR}/out11)
add_test(TEST12 ${PROJECT_SOURCE_DIR}/difftest.sh ./map 12 ./myoutput12.txt ${PROJECT_SOURCE_DIR}/out12)
add_test(TEST13 ${PROJECT_SOURCE_DIR}/difftest.sh ./map 13 ./myoutput13.txt ${PROJECT_SOURCE_DIR}/out13)
add_test(TEST14 ${PROJECT_SOURCE_DIR}/difftest.sh ./map 14 ./myoutput14.txt ${PROJECT_SOURCE_DIR}/out14)
add_test(TEST15 ${PROJECT_SOURCE_DIR}/difftest.sh ./map 15 ./myoutput15.txt ${PROJECT_SOURCE_DIR}/out15)
add_test(TEST16 ${PROJECT_SOURCE_DIR}/difftest.sh ./map 16 ./myoutput16.txt ${PROJECT_SOURCE_DIR}/out16)
add_test(TEST17 ${PROJECT_SOURCE_DIR}/difftest.sh ./map 17 ./myoutput17.txt ${PROJECT_SOURCE_DIR}/out17)
add_test(TEST18 ${PROJECT_SOURCE_DIR}/difftest.sh ./map 18 ./myoutput18.txt ${PROJECT_SOURCE_DIR}/out18)
add_test(TEST19 ${PROJECT_SOURCE_DIR}/difftest.sh ./map 19 ./myoutput19.txt ${PROJECT_SOURCE_DIR}/out19)

