# Linked lists lab.
cmake_minimum_required(VERSION 2.6)
project(MAP)

set(ARGUMENTS 0 1 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19)

#if(CMAKE_COMPILER_IS_GNUCXX)
	set(CMAKE_C_FLAGS "-Wextra -Wall -std=c89 -pedantic -Wstrict-prototypes -Wmissing-prototypes -Wdeclaration-after-statement -pipe -g")
#elseif(MSVC)
#	set(CMAKE_CXX_FLAGS "/EHa /W4 /WX /Za")
#elseif(BORLAND)
#	set(CMAKE_CXX_FLAGS "-w")
#endif(CMAKE_COMPILER_IS_GNUCXX)

add_executable(map driver.c map.c)

enable_testing()
add_test(TEST_0 ${PROJECT_SOURCE_DIR}/difftest.sh ./map 0 ${PROJECT_SOURCE_DIR}/out0)
add_test(TEST_1 ${PROJECT_SOURCE_DIR}/difftest.sh ./map 1 ${PROJECT_SOURCE_DIR}/out1)
add_test(TEST_2 ${PROJECT_SOURCE_DIR}/difftest.sh ./map 2 ${PROJECT_SOURCE_DIR}/out2)
add_test(TEST_3 ${PROJECT_SOURCE_DIR}/difftest.sh ./map 3 ${PROJECT_SOURCE_DIR}/out3)
add_test(TEST_4 ${PROJECT_SOURCE_DIR}/difftest.sh ./map 4 ${PROJECT_SOURCE_DIR}/out4)
add_test(TEST_5 ${PROJECT_SOURCE_DIR}/difftest.sh ./map 5 ${PROJECT_SOURCE_DIR}/out5)
add_test(TEST_6 ${PROJECT_SOURCE_DIR}/difftest.sh ./map 6 ${PROJECT_SOURCE_DIR}/out6)
add_test(TEST_7 ${PROJECT_SOURCE_DIR}/difftest.sh ./map 7 ${PROJECT_SOURCE_DIR}/out7)
add_test(TEST_8 ${PROJECT_SOURCE_DIR}/difftest.sh ./map 8 ${PROJECT_SOURCE_DIR}/out8)
add_test(TEST_9 ${PROJECT_SOURCE_DIR}/difftest.sh ./map 9 ${PROJECT_SOURCE_DIR}/out9)
add_test(TEST_10 ${PROJECT_SOURCE_DIR}/difftest.sh ./map 10 ${PROJECT_SOURCE_DIR}/out10)
add_test(TEST_11 ${PROJECT_SOURCE_DIR}/difftest.sh ./map 11 ${PROJECT_SOURCE_DIR}/out11)
add_test(TEST_12 ${PROJECT_SOURCE_DIR}/difftest.sh ./map 12 ${PROJECT_SOURCE_DIR}/out12)
add_test(TEST_13 ${PROJECT_SOURCE_DIR}/difftest.sh ./map 13 ${PROJECT_SOURCE_DIR}/out13)
add_test(TEST_14 ${PROJECT_SOURCE_DIR}/difftest.sh ./map 14 ${PROJECT_SOURCE_DIR}/out14)
add_test(TEST_15 ${PROJECT_SOURCE_DIR}/difftest.sh ./map 15 ${PROJECT_SOURCE_DIR}/out15)
add_test(TEST_16 ${PROJECT_SOURCE_DIR}/difftest.sh ./map 16 ${PROJECT_SOURCE_DIR}/out16)
add_test(TEST_17 ${PROJECT_SOURCE_DIR}/difftest.sh ./map 17 ${PROJECT_SOURCE_DIR}/out17)
add_test(TEST_18 ${PROJECT_SOURCE_DIR}/difftest.sh ./map 18 ${PROJECT_SOURCE_DIR}/out18)
add_test(TEST_19 ${PROJECT_SOURCE_DIR}/difftest.sh ./map 19 ${PROJECT_SOURCE_DIR}/out19)
add_test(MEM_0 ${PROJECT_SOURCE_DIR}/memtest.sh ./map 0)
add_test(MEM_1 ${PROJECT_SOURCE_DIR}/memtest.sh ./map 1)
add_test(MEM_2 ${PROJECT_SOURCE_DIR}/memtest.sh ./map 2)
add_test(MEM_3 ${PROJECT_SOURCE_DIR}/memtest.sh ./map 3)
add_test(MEM_4 ${PROJECT_SOURCE_DIR}/memtest.sh ./map 4)
add_test(MEM_5 ${PROJECT_SOURCE_DIR}/memtest.sh ./map 5)
add_test(MEM_6 ${PROJECT_SOURCE_DIR}/memtest.sh ./map 6)
add_test(MEM_7 ${PROJECT_SOURCE_DIR}/memtest.sh ./map 7)
add_test(MEM_8 ${PROJECT_SOURCE_DIR}/memtest.sh ./map 8)
add_test(MEM_9 ${PROJECT_SOURCE_DIR}/memtest.sh ./map 9)
add_test(MEM_10 ${PROJECT_SOURCE_DIR}/memtest.sh ./map 10)
add_test(MEM_11 ${PROJECT_SOURCE_DIR}/memtest.sh ./map 11)
add_test(MEM_12 ${PROJECT_SOURCE_DIR}/memtest.sh ./map 12)
add_test(MEM_13 ${PROJECT_SOURCE_DIR}/memtest.sh ./map 13)
add_test(MEM_14 ${PROJECT_SOURCE_DIR}/memtest.sh ./map 14)
add_test(MEM_15 ${PROJECT_SOURCE_DIR}/memtest.sh ./map 15)
add_test(MEM_16 ${PROJECT_SOURCE_DIR}/memtest.sh ./map 16)
add_test(MEM_17 ${PROJECT_SOURCE_DIR}/memtest.sh ./map 17)
add_test(MEM_18 ${PROJECT_SOURCE_DIR}/memtest.sh ./map 18)
add_test(MEM_19 ${PROJECT_SOURCE_DIR}/memtest.sh ./map 19)

