# BST-based cow assignment.
cmake_minimum_required(VERSION 2.6)
project(COW)

set(CMAKE_C_FLAGS "-Wextra -Wall -std=c89 -pedantic -Wstrict-prototypes -Wmissing-prototypes -Wdeclaration-after-statement -pipe -g")
set(CMAKE_CXX_FLAGS "-Wall -Wextra -ansi -Wold-style-cast -Woverloaded-virtual -Wsign-promo -Wctor-dtor-privacy -Wnon-virtual-dtor -Weffc++ -g -pipe")
set(CMAKE_C_FLAGS_DEBUG "-g")
set(CMAKE_C_FLAGS_RELEASE "-O")

add_executable(cow driver.cpp array.cpp element1.cpp element2.cpp element-factory.cpp)

enable_testing()
add_test(TEST_0 ${PROJECT_SOURCE_DIR}/difftest.sh ./cow 0 ${PROJECT_SOURCE_DIR}/out0)
add_test(TEST_1 ${PROJECT_SOURCE_DIR}/difftest.sh ./cow 1 ${PROJECT_SOURCE_DIR}/out1)
add_test(TEST_2 ${PROJECT_SOURCE_DIR}/difftest.sh ./cow 2 ${PROJECT_SOURCE_DIR}/out2)
add_test(TEST_3 ${PROJECT_SOURCE_DIR}/difftest.sh ./cow 3 ${PROJECT_SOURCE_DIR}/out3)
add_test(TEST_4 ${PROJECT_SOURCE_DIR}/difftest.sh ./cow 4 ${PROJECT_SOURCE_DIR}/out4)
add_test(TEST_5 ${PROJECT_SOURCE_DIR}/difftest.sh ./cow 5 ${PROJECT_SOURCE_DIR}/out5)
add_test(TEST_6 ${PROJECT_SOURCE_DIR}/difftest.sh ./cow 6 ${PROJECT_SOURCE_DIR}/out6)
add_test(TEST_7 ${PROJECT_SOURCE_DIR}/difftest.sh ./cow 7 ${PROJECT_SOURCE_DIR}/out7)
add_test(TEST_8 ${PROJECT_SOURCE_DIR}/difftest.sh ./cow 8 ${PROJECT_SOURCE_DIR}/out8)
add_test(TEST_9 ${PROJECT_SOURCE_DIR}/difftest.sh ./cow 9 ${PROJECT_SOURCE_DIR}/out9)
add_test(TEST_10 ${PROJECT_SOURCE_DIR}/difftest.sh ./cow 10 ${PROJECT_SOURCE_DIR}/out10)
add_test(TEST_11 ${PROJECT_SOURCE_DIR}/difftest.sh ./cow 11 ${PROJECT_SOURCE_DIR}/out11)
add_test(TEST_12 ${PROJECT_SOURCE_DIR}/difftest.sh ./cow 12 ${PROJECT_SOURCE_DIR}/out12)
add_test(TEST_13 ${PROJECT_SOURCE_DIR}/difftest.sh ./cow 13 ${PROJECT_SOURCE_DIR}/out13)
add_test(TEST_14 ${PROJECT_SOURCE_DIR}/difftest.sh ./cow 14 ${PROJECT_SOURCE_DIR}/out14)
add_test(TEST_15 ${PROJECT_SOURCE_DIR}/difftest.sh ./cow 15 ${PROJECT_SOURCE_DIR}/out15)
add_test(TEST_16 ${PROJECT_SOURCE_DIR}/difftest.sh ./cow 16 ${PROJECT_SOURCE_DIR}/out16)
add_test(MEM_0 ${PROJECT_SOURCE_DIR}/memtest.sh ./cow 0)
add_test(MEM_1 ${PROJECT_SOURCE_DIR}/memtest.sh ./cow 1)
add_test(MEM_2 ${PROJECT_SOURCE_DIR}/memtest.sh ./cow 2)
add_test(MEM_3 ${PROJECT_SOURCE_DIR}/memtest.sh ./cow 3)
add_test(MEM_4 ${PROJECT_SOURCE_DIR}/memtest.sh ./cow 4)
add_test(MEM_5 ${PROJECT_SOURCE_DIR}/memtest.sh ./cow 5)
add_test(MEM_6 ${PROJECT_SOURCE_DIR}/memtest.sh ./cow 6)
add_test(MEM_7 ${PROJECT_SOURCE_DIR}/memtest.sh ./cow 7)
add_test(MEM_8 ${PROJECT_SOURCE_DIR}/memtest.sh ./cow 8)
add_test(MEM_9 ${PROJECT_SOURCE_DIR}/memtest.sh ./cow 9)
add_test(MEM_10 ${PROJECT_SOURCE_DIR}/memtest.sh ./cow 10)
add_test(MEM_11 ${PROJECT_SOURCE_DIR}/memtest.sh ./cow 11)
add_test(MEM_12 ${PROJECT_SOURCE_DIR}/memtest.sh ./cow 12)
add_test(MEM_13 ${PROJECT_SOURCE_DIR}/memtest.sh ./cow 13)
add_test(MEM_14 ${PROJECT_SOURCE_DIR}/memtest.sh ./cow 14)
add_test(MEM_15 ${PROJECT_SOURCE_DIR}/memtest.sh ./cow 15)
add_test(MEM_16 ${PROJECT_SOURCE_DIR}/memtest.sh ./cow 16)

